[package]
name = "kubecrafter"
version = "0.1.0"
authors = ["FuseTim <fusetim@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "^0.1"
kube = "0.32.1"
kube-derive = "0.32.1"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }
redis = "^0.15"
rcon = "^0.2"
tokio = {version = "^0.2", features = ["macros", "fs"]}
env_logger = "^0.7"
log = "^0.4"
futures = "0.3.4"
serde = "^1.0"
serde_derive = "^1.0"
toml = "^0.5"